PZS-NG CHANGELOG
----------------

v1.0.7  --> 1.0.X  :
		- added support for vbr-old/vbr-new.
		- added more options to zsconfig - error msgs and benchmark output.
		- fix a bug in rescan when scanning new (not previously scanned) dirs.
		- fix a bug with rescan in 'quick' mode.
		- added '2007' and removed '2003' from list of allowed years in mp3.
v1.0.6  --> 1.0.7  : (r2230)
		- updated libcopy to v1.2 - fix for openbsd4.0.
		- added support for not sorting audio in certain dirs.
		- New option in zsconfig.h - audio_nosort_dirs - list of dirs where no
		  audiosorting should take place.
		- remove _INT from groupname in audio_group sorting.
		- added option to ignore certain languages in the mp3 sorting.
		- New option in zsconfig.h - audio_ignored_languages - list of ignored
		  languages.
		- fixed a bug in partial_on_noforce.
		- fixed a bug with no-nfo symlinks and false parentdir.
		- added a new option to incomplete-list.sh.
		- fixed a bug in cleanup where syms with absolute paths was ignored.
		- fix: ignore allowed_types when scanning an sfv.
		- fix: remove sfvdata when encountering a 'bad' sfv.
		- added option to allow slashes in filenames listed in the sfv.
		- New option in zsconfig.h - allow_slash_in_sfv - allow slashes in sfv.
		- added option to create sfv files on rescan.
		- New option in zsconfig.h - create_missing_sfv - option to create sfv files.

v1.0.5  --> 1.0.6  : (r2195)
		- fixed a bug with lenient compare, which mostly affected mp3-releases.
		- fixed a bug re: testing files when sfv was uploaded after releasefile(s).
		- fixed a bug re: broken sfv files, that had files with no crc at the end.
		- fixed a bug re: deny_nfo_upload_in_zip.
		- fixed a bug re: wrong msg to client on certain cases in zipscript-c.
		- added support for lame 3.97 presets.
		- fixed a bug re: uploads to nocheck_dirs.
		- added dl_speedtest - a new binary to measure download speeds.