@@ -52,7 +52,7 @@ zsconfig.h:	The option 'del_progressmeter' has changed. Make sure you have
 		Changed in: r1348
 
 		racedata changed. You *HAVE* *TO* rm -fR ftp-data/pzs-ng/*.
-		Changed in: 1277, 1458, 1474, 1508, 1521, 1535
+		Changed in: 1277, 1458, 1474, 1508, 1521, 1535, 2246
 
 
 dZSbot.conf	A dZSbot.conf.defaults first appeared in r1120 - if your bot
